force-app/main/default/objects/Password_Reset_Token__c/Password_Reset_Token__c.object-meta.xml
<CustomObject>
    <description>Stocke les tokens hashés SHA-256 pour la réinitialisation sécurisée des mots de passe portail. Le token brut n est jamais stocké.</description>
    <label>Password Reset Token</label>
    <nameField>
        <displayFormat>PRT-{0000}</displayFormat>
        <label>Token ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Password Reset Tokens</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>