force-app/main/default/objects/Password_Reset_Token__c/fields/Attempts__c.field-meta.xml
<CustomField>
    <fullName>Attempts__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Nombre de tentatives d utilisation du token - max 3 pour le rate limiting</description>
    <label>Attempts</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>