force-app/main/default/objects/Password_Reset_Token__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Email du candidat pour référence rapide et audit</description>
    <label>Email</label>
    <type>Email</type>
</CustomField>