force-app/main/default/objects/Password_Reset_Token__c/fields/Expiration__c.field-meta.xml
<CustomField>
    <fullName>Expiration__c</fullName>
    <description>Date et heure d expiration du token (24h après création)</description>
    <label>Expiration</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>