force-app/main/default/objects/Password_Reset_Token__c/fields/Is_Used__c.field-meta.xml
<CustomField>
    <fullName>Is_Used__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marque le token comme utilisé en usage unique. Un token utilisé ne peut plus servir.</description>
    <label>Is Used</label>
    <type>Checkbox</type>
</CustomField>