force-app/main/default/objects/Password_Reset_Token__c/fields/Token_Hash__c.field-meta.xml
<CustomField>
    <fullName>Token_Hash__c</fullName>
    <description>Hash SHA-256 du token envoyé par email. Le token brut n est jamais stocké en base.</description>
    <externalId>true</externalId>
    <label>Token Hash</label>
    <length>64</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>