force-app/main/default/objects/Password_Reset_Token__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Référence vers le User portail concerné par le token</description>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Password Reset Tokens</relationshipLabel>
    <relationshipName>Password_Reset_Tokens</relationshipName>
    <type>Lookup</type>
</CustomField>